changed css for buttons

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Zipcar Prototype</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					           	<li class="ftco-animate"><a href="https://frozen-hollows-69571.herokuapp.com/"><span class="icon-link"></span></a></li>
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/Zipcar"><span class="icon-github"></span></a></li>
+					           	<li class="ftco-animate"><a class="projectlinks" href="https://frozen-hollows-69571.herokuapp.com/"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Zipcar"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -338,7 +338,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Play Along</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/Play-Along"><span class="icon-github"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Play-Along"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -349,9 +349,10 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">MarketPlace</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-	    						<li class="ftco-animate"><a href="http://www.marketplace.manavrajvanshi.com/"><span class="icon-link"></span></a></li>
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/CMPE272-Market_Place"><span class="icon-github"></span></a></li>
+	    						<li class="ftco-animate"><a class="projectlinks" href="http://www.marketplace.manavrajvanshi.com/"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE272-Market_Place"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
+
 	    				</div>
     				</div>
   				</div>
@@ -361,8 +362,8 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Stock Portfolio Suggestion</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-	    						<li class="ftco-animate"><a href="https://peaceful-bastion-98003.herokuapp.com/"><span class="icon-link"></span></a></li>
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/Stock-Portfolio-Suggestion-Engine"><span class="icon-github"></span></a></li>
+	    						<li class="ftco-animate"><a class="projectlinks" href="https://peaceful-bastion-98003.herokuapp.com/"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Stock-Portfolio-Suggestion-Engine"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -373,7 +374,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Covid-19 Analysis</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/covid19-analysis"><span class="icon-github"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/covid19-analysis"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -384,7 +385,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">X-Ray Disease Classification</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a href="https://github.com/kp5115/CMPE_255_Chest_Xray_Disease_Classification"><span class="icon-github"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE_255_Chest_Xray_Disease_Classification"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -480,8 +481,6 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            
           </div>
         </div>
       </div>
