minor improvements in index.html

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 								   </span>
 								</h2>
 								<ul class="ftco-footer-social list-unstyled mt-5">
-						            <li class="ftco-animate"><a href="https://www.linkedin.com/in/karanpatel5115/"><span class="icon-linkedin"></span></a></li>
-						            <li class="ftco-animate"><a href="https://github.com/kp5115"><span class="icon-github"></span></a></li>
+						            <li class="ftco-animate"><a href="https://www.linkedin.com/in/karanpatel5115/" target="_blank"><span class="icon-linkedin"></span></a></li>
+						            <li class="ftco-animate"><a href="https://github.com/kp5115" target="_blank"><span class="icon-github"></span></a></li>
 						            <!-- <li class="ftco-animate"><a href="mailto:karanpatel31105115@gmail.com"><span class="icon-google"></span></a></li> -->
 						         </ul>
 							</div>
@@ -110,7 +110,7 @@
 	                <span class="number" data-number="15">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="https://drive.google.com/file/d/1MSzfCjmE82gFY6EoUvi9OAUI_QzT3apj/view?usp=sharing" class="btn btn-primary py-3 px-3">Download Resume</a></p>
+                <p><a href="https://drive.google.com/file/d/1MSzfCjmE82gFY6EoUvi9OAUI_QzT3apj/view?usp=sharing" class="btn btn-primary py-3 px-3"  target="_blank">Download Resume</a></p>
               </div>
 	          </div>
 	        </div>
@@ -195,7 +195,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> Programming </h2>
-		    					<span class="position">Python, Java, C, C++, JavaScript</span>
+		    					<span class="position-fontweight">Python, Java, C, C++, JavaScript</span>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -204,7 +204,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> Web Frameworks </h2>
-		    					<span class="position">CSS, HTML, Angular, React, Redux, Ionic, PHP, Node.js, Django, cURL, TypeScript</span>
+		    					<span class="position-fontweight" >CSS, HTML, Angular, React, Redux, Ionic, PHP, Node.js, Django, cURL, TypeScript</span>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -213,7 +213,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> ML Libraries </h2>
-		    					<span class="position">Numpy, Pandas, Matplotlib, Sklearn, Spark, pyTorch, Tensorflow, Keras, Open CV</span>
+		    					<span class="position-fontweight">Numpy, Pandas, Matplotlib, Sklearn, Spark, pyTorch, Tensorflow, Keras, Open CV</span>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -222,7 +222,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> Deployment Tools </h2>
-		    					<span class="position">AWS (EC2, S3, RDS, ECS, Elastic Load Balancer), Docker, GCP, Git, Github</span>
+		    					<span class="position-fontweight">AWS (EC2, S3, RDS, ECS, Elastic Load Balancer), Docker, GCP, Heroku, Git, Github</span>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -231,7 +231,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> Database Tools </h2>
-		    					<span class="position">Mongo DB, MySQL, MSSQL, Redshift</span>
+		    					<span class="position-fontweight">Mongo DB, MySQL, MSSQL, Redshift</span>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -240,7 +240,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<h2> Software Development Tools </h2>
-		    					<span class="position">Agile, Kanban</span>
+		    					<span class="position-fontweight">Agile, Kanban</span>
 	    					</div>
 	    				</div>
 					  </div>
@@ -252,7 +252,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2016</span>
-		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/K5TZLYR9PHAK"> Algorithms: Design and Analysis, Part 1 </a></h2>
+		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/K5TZLYR9PHAK" target="_blank"> Algorithms: Design and Analysis, Part 1 </a></h2>
 		    					<span class="position">Coursera</span>
 	    					</div>
 	    				</div>
@@ -262,7 +262,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2019</span>
-		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/RD4LW5NJ4UWS"> Google Cloud Platform Big Data and Machine Learning Fundamentals </a></h2>
+		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/RD4LW5NJ4UWS" target="_blank"> Google Cloud Platform Big Data and Machine Learning Fundamentals </a></h2>
 		    					<span class="position">Coursera</span>
 		    				</div>
 	    				</div>
@@ -272,7 +272,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2017</span>
-		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/FPMUP62D6QU2"> Neural Networks and Deep Learning</a></h2>
+		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/FPMUP62D6QU2" target="_blank"> Neural Networks and Deep Learning</a></h2>
 		    					<span class="position">Coursera</span>
 		    				</div>
 	    				</div>
@@ -282,7 +282,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2016</span>
-		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/YGYRHKPTXYGB"> Machine Learning</a></h2>
+		    					<h2> <a style="color:black;" href="https://www.coursera.org/account/accomplishments/certificate/YGYRHKPTXYGB" target="_blank"> Machine Learning</a></h2>
 		    					<span class="position">Coursera</span>
 		    				</div>
 	    				</div>
@@ -292,7 +292,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2019</span>
-		    					<h2> <a style="color:black;" href="https://courses.edx.org/certificates/206fba07d2484b5fbd2047f3f5a0a909"> Introduction to R for Data Science</a></h2>
+		    					<h2> <a style="color:black;" href="https://courses.edx.org/certificates/206fba07d2484b5fbd2047f3f5a0a909" target="_blank"> Introduction to R for Data Science</a></h2>
 		    					<span class="position">edX</span>
 		    				</div>
 	    				</div>
@@ -302,7 +302,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2016</span>
-		    					<h2> <a style="color:black;" href="https://courses.edx.org/certificates/4752249e894e49f58783f40ca27bec5c"> MIT Launch X – Becoming an Entrepreneur </a></h2>
+		    					<h2> <a style="color:black;" href="https://courses.edx.org/certificates/4752249e894e49f58783f40ca27bec5c" target="_blank"> MIT Launch X – Becoming an Entrepreneur </a></h2>
 		    					<span class="position">edX</span>
 		    				</div>
 	    				</div>
@@ -327,8 +327,8 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Zipcar Prototype</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					           	<li class="ftco-animate"><a class="projectlinks" href="https://frozen-hollows-69571.herokuapp.com/"><span class="icon-link linksize"></span></a></li>
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Zipcar"><span class="icon-github linksize"></span></a></li>
+					           	<li class="ftco-animate"><a class="projectlinks" href="https://frozen-hollows-69571.herokuapp.com/" target="_blank"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Zipcar" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -339,7 +339,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Play Along</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Play-Along"><span class="icon-github linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Play-Along" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -350,8 +350,8 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">MarketPlace</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-	    						<li class="ftco-animate"><a class="projectlinks" href="http://www.marketplace.manavrajvanshi.com/"><span class="icon-link linksize"></span></a></li>
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE272-Market_Place"><span class="icon-github linksize"></span></a></li>
+	    						<li class="ftco-animate"><a class="projectlinks" href="http://www.marketplace.manavrajvanshi.com/" target="_blank"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE272-Market_Place" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 
 	    				</div>
@@ -363,8 +363,8 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Stock Portfolio Suggestion</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-	    						<li class="ftco-animate"><a class="projectlinks" href="https://peaceful-bastion-98003.herokuapp.com/"><span class="icon-link linksize"></span></a></li>
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Stock-Portfolio-Suggestion-Engine"><span class="icon-github linksize"></span></a></li>
+	    						<li class="ftco-animate"><a class="projectlinks" href="https://peaceful-bastion-98003.herokuapp.com/" target="_blank"><span class="icon-link linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/Stock-Portfolio-Suggestion-Engine" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -375,7 +375,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">Covid-19 Analysis</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/covid19-analysis"><span class="icon-github linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/covid19-analysis" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -386,7 +386,7 @@
 	    				<div class="text text-center p-4">
 	    					<h2 style="color: white">X-Ray Disease Classification</h2>
 	    					<ul class="ftco-footer-social list-unstyled mt-5">
-					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE_255_Chest_Xray_Disease_Classification"><span class="icon-github linksize"></span></a></li>
+					            <li class="ftco-animate"><a class="projectlinks" href="https://github.com/kp5115/CMPE_255_Chest_Xray_Disease_Classification" target="_blank"><span class="icon-github linksize"></span></a></li>
 						    </ul>	
 	    				</div>
     				</div>
@@ -461,8 +461,8 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>A versatile software engineer graduate aspiring to build innovative and creative software solutions.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://www.linkedin.com/in/karanpatel5115/"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="https://github.com/kp5115"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/karanpatel5115/" target="_blank"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/kp5115" target="_blank"><span class="icon-github"></span></a></li>
                 <li class="ftco-animate"><a href="mailto:karanpatel31105115@gmail.com"><span class="icon-google"></span></a></li>
               </ul>
             </div>
