--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
 		    					<span class="position">ezDI, Inc.</span>
 		    					<ul>
 		    						<li>
-		    							Combined 2 algorithms, BI-LSTM(Long Short term Memory) and CRF(Conditional Random Field) to develop an end to end learning which is gaining 2% more Precision compared to statistical algorithms. 
+		    							Combined 2 algorithms, BI-LSTM(Long Short term Memory) and CRF(Conditional Random Field) to develop an end to end learning which improved precision by  2%  compared to statistical algorithms. 
 		    						</li>
 		    						<li>	
-										We had used the stacking method by combining different classifiers and compared it with bagging and boosting algorithms and improved the accuracy of 5% and also reduce the training time codes compared to Neural Network. 
+										Analyzed the stacking method by combining different classifiers and compared it with bagging and boosting algorithms. This improved the accuracy by 5% and also reduced the training time codes compared to Neural Network. 
 									</li>
 									<li>
-										The core part from all the statistical analysis starts by making a raw file to easily readable and understandable to all clinical coders in MySQL format that had removed the burden of 2+hrs for them to analyze raw format data. 
+										Created a raw file for clinical coders that is easily readable and understandable in MySQL format. That reduced the analyzing time by 2+ hours and improved conversion accuracy by 3%. 
 									</li>
 									<li>
-										I had used the models made by a python in a Java pipeline with a sklearn2ppml library to improve accuracy.
+										Utilized models made by python in a Java pipeline with sklearn2ppml library to improve accuracy by 2.5%.
 									</li>
 								</ul>
 		    				</div>
