--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					    		<span class="icon-university"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2019-2020</span>
+		    					<span class="date">Aug. 2019 - May 2021</span>
 		    					<h2>Master in Software Engineering</h2>
 		    					<span class="position">San Jose State University</span>
 		    					<!-- <span class="position">GPA: 3.57</span> -->
@@ -151,7 +151,7 @@
 					    		<span class="icon-university"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2018</span>
+		    					<span class="date">Aug. 2014 - May 2018</span>
 		    					<h2>Bachelor of Technology in Information and Communication Technology</h2>
 		    					<span class="position">Ahmedabad University</span>
 		    					<!-- <span class="position">GPA: 3.01</span> -->
@@ -163,11 +163,47 @@
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="icon-suitcase"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Aug. 2020 - Present</span>
+		    					<h2>Graduate Teaching Associate</h2>
+		    					<span class="position">San Jose State University</span>
+		    					<ul>
+		    						<li>
+		    							Teaching Associate for ME 30 - Computer Applications in Mechanical Engineering Department.  
+		    						</li>
+		    						<li>
+		    							Taught basics of Python and how to implement the code on circuit playground express of Adafruit.  
+		    						</li>
+		    					</ul>
+		    				</div>
+		    			</div>
+		    			<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="icon-suitcase"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Aug. 2020 - Present</span>
+		    					<h2>Graduate Teaching Assistant</h2>
+		    					<span class="position">San Jose State University</span>
+		    					<ul>
+		    						<li>
+		    							Teaching Assistant for DATA 255 - Deep Learning Technologies in Data Science Department.  
+		    						</li>
+		    						<li>
+		    							Helped the professor in designing the course structure and grading the student's assignments and exam papers.  
+		    						</li>
+		    					</ul>
+		    				</div>
+		    			</div>
+					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="icon-suitcase"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">Aug. 2017- Jan. 2019</span>
 		    					<h2>Software Developer Intern</h2>
 		    					<span class="position">ezDI, Inc.</span>
 		    					<ul>
@@ -186,6 +222,7 @@
 								</ul>
 		    				</div>
 	    				</div>
+
 					  </div>
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
